# GOPH419Lab2Smit

./: README.md  h2o_density_vs_temp.txt  pyproject.toml
src/: driver.py  linalg_interp.py  tests.py
